ui for embedded daemon and more stats

--- a/resources/custom.css
+++ b/resources/custom.css
@@ -106,7 +106,7 @@ div {
 	border:0;
 	border-bottom:0px solid #151933;
 	margin-left:0px;
-    text-decoration:none;
+	text-decoration:none;
 }
 .data_left input
 {
@@ -124,8 +124,8 @@ input {
 }
 #log_level {
 	color:#454545;
-    margin-left: 5px;
-    margin-right: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 .blocks_hash a {
 	color:#00abff;
@@ -200,7 +200,7 @@ input, button, textarea, :focus {
 }
 
 .tabcontent {
-	height:calc(100% - 490px);
+	height:calc(100% - 625px);
 	display: none;
 	padding: 0px 20px;
 	min-width:30rem;
@@ -368,17 +368,17 @@ div#help a
 }
 
 .dropbtn {
-  font-family: "Roboto-Thin";
-  text-align:left;
-  background-color: #121212;
-  color: white;
-  padding: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 12px;
-  border: none;
-  cursor: pointer;
-  width: 140px;
+	font-family: "Roboto-Thin";
+	text-align:left;
+	background-color: #121212;
+	color: white;
+	padding: 4px;
+	padding-left: 10px;
+	padding-right: 10px;
+	font-size: 12px;
+	border: none;
+	cursor: pointer;
+	width: 140px;
 }
 .dropbtn:before {
 	content: "";
@@ -403,32 +403,95 @@ div#help a
 	border-top: 6px solid #121212;
 }
 .dropdown {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #121212;
-  min-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: #121212;
+	min-width: 140px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
 }
 .dropdown-content button{
-  font-family: "Roboto-Thin";
-  color: #eeeeee;
-  text-align:left;
-  background-color: transparent;
-  border: none;
-  padding: 4px 12px;
-  text-decoration: none;
-  display: block;
-  width:100%;
-  cursor: pointer;
+	font-family: "Roboto-Thin";
+	color: #eeeeee;
+	text-align:left;
+	background-color: transparent;
+	border: none;
+	padding: 4px 12px;
+	text-decoration: none;
+	display: block;
+	width:100%;
+	cursor: pointer;
 }
 .dropdown-content a:hover {
 	color: #000000;
 	background-color: #eeeeee
 }
 
-.show {display:block;} 
+.show {display:block;}
+
+ /* The switch - the box around the slider */
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 40px;
+	height: 20px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #121212;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 16px;
+	width: 16px;
+	left: 2px;
+	bottom: 2px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked + .slider {
+	background-color: #00abff;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #121212;
+}
+
+input:checked + .slider:before {
+	-webkit-transform: translateX(20px);
+	-ms-transform: translateX(20px);
+	transform: translateX(20px);
+}
+
+/* Rounded sliders */
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+} 
