--- a/resources/wallet.css
+++ b/resources/wallet.css
@@ -25,7 +25,6 @@ button {
 	font-family: "Roboto";
 	font-size: 1rem;
 	color: #eeeeee;
-	margin-top: 15px;
 	background-color: #00abff;
 	border-color: #00abff;
 	outline:none; 
@@ -34,6 +33,7 @@ button {
 	transition: 0.3s;
 	border-radius: 0px;
 	height: 30px;
+	width: 190px;
 	padding: 0px 20px;
 }
 .card {
