--- a/resources/custom.css
+++ b/resources/custom.css
@@ -365,6 +365,7 @@ input#daemon_command_input {
 	text-align: right;
 	padding-right: 20px;
 	vertical-align: top;
+	cursor: pointer;
 }
 .toplinks a {
 	font-family: "Roboto-Thin";
